# Federated_Learning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER_CLIENTS_GUIDE.md  DOCKER_COMPOSE.md  IMPLEMENTATION_SUMMARY.md  MLFLOW_GUIDE.md  Makefile  NETWORK_TIMEOUT_FIX.md  PLATFORM_SHOWCASE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  RUNNING_GUIDE.md  SUMMARY.md  TECHNICAL_BREAKDOWN.md  add-more-clients.sh  build-images-sequential.sh  check_quality.sh  demo-container-clients.sh  explore.ipynb  format_code.sh  launch-platform.sh  pyproject.toml  quick-start.sh  rebuild-dark-mode.sh  requirements-dev.txt  requirements-minimal.txt  run-docker-clients.sh  run_demo.py  setup-docker-compose.sh  setup.cfg  showcase-platform.sh  test-docker-compose.sh  verify-platform.sh
complete/fl/: Dockerfile  Dockerfile.cpu  README.md  pyproject.toml
complete/fl/config/: data_schema.yaml  default.yaml
complete/fl/config/examples/: advanced_all_features.yaml  baseline_fedavg.yaml  byzantine_robust.yaml  dp_privacy.yaml  fedprox_heterogeneous.yaml  noniid_label_skew.yaml
complete/fl/examples/: personalized_fl_example.py
complete/fl/fl/: benchmarks.py  client_app.py  compression.py  config.py  config_schema.py  data_loader.py  data_validation.py  dp.py  evaluation.py  exceptions.py  experiment_manager.py  logging_config.py  metrics.py  partitioning.py  personalization.py  personalization_storage.py  profiling.py  reproducibility.py  robust_aggregation.py  secure.py  server_app.py  storage.py  task.py  tensorboard_logger.py  tracking.py
complete/fl/fl/attacks/: byzantine.py
complete/fl/fl/benchmarks/: compression.py
complete/fl/fl/core/: __init__.py  client.py  server.py
complete/fl/fl/models/: __init__.py  base.py  cnn.py
complete/fl/fl/personalization/: __init__.py  adapters.py  distillation.py  orchestrator.py  personalized_client.py  (+1 more)
complete/fl/scripts/: profile_training.py  resume_from_ckpt.py  verify_reproducibility.py
complete/fl/tests/: conftest.py  test_data_validation.py  test_dataloader.py  test_integration.py  test_model_quality.py  test_partitioner.py  test_personalized_fl.py  test_privacy.py  test_selection.py  test_strategies.py  test_training_step.py
(+87 files in other folders)
