# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
# Note: torch and torchvision are installed separately in Dockerfile for CPU/GPU optimization
dependencies = [
    "flwr[simulation]",
    "flwr-datasets[vision]",
    "pyyaml",
    "opacus",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.82.0",
    
    # Code quality
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    
    # Data validation
    "pydantic>=2.0.0",
    "great-expectations>=0.17.0",
    
    # Logging
    "structlog>=23.1.0",
    
    # Utilities
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fl.server_app:app"
clientapp = "fl.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
local-epochs = 1
lr = 0.01

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true